--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <br>
         <!--Navagiation Section-->
         <nav class="navbar">
-            <li><a href="./index.html">Welcome To My Website</a></li>
+            <li><a href="#Welcome To My Website">Home</a></li>
             <li><a href="#Experience">Experience</a></li>
             <li><a href="#Skills">Skills</a></li>
             <li><a href="#Education">Education</a></li>
         </nav>
-        <div class="Experience" style="background-color: 000091;font-family: Arial, Helvetica, sans-serif;">
+        <div class="Experience">
             <h2>Experience</h2>
         <br>
             <h3>PrimeRevenue | Atlanta, GA | Dec. 2019 - Present</h3>
