--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="#Experience">Experience</a></li>
             <li><a href="#Skills">Skills</a></li>
             <li><a href="#Education">Education</a></li>
+            <li><a href="#Contact Me">Contact Me</a></li>
         </nav>
         <div class="Experience">
             <h2>Experience</h2>
@@ -98,7 +99,8 @@
             <thead><h3>Programming</h3></thead>
                 <tr>
                     <td>HTML,</td>
-                    <td>CSS</td>
+                    <td>CSS,</td>
+                    <td>SQL</td>
                 </tr>       
         </tbody>
         </table>
@@ -115,8 +117,14 @@
             <img src="https://news.kennesaw.edu/stories/2018/images/FPR_new%20Logo%20rotator.jpg" style="width: 700px; height: 200px;" > 
     </body>
     <!--This section is for LinkedIN and Contact Info-->
-    <footer style="font-family: Arial, Helvetica, sans-serif;">
-        <h3>To view my LinkedIn or revisit, please click <a href="https://www.linkedin.com/in/laughlinsmith/" target="_blank">here.</a></h3>
+    <footer class="footer">
+        <h2>Contact Me</h2>
+        <br>
+        <ul>
+            <li>To view my LinkedIn or revisit, please click<a href="https://www.linkedin.com/in/laughlinsmith/"target="_blank"> here.</a></li>             
+            <li>To email, please click<a href="mailto: laughlinsmith@gmail.com"> here.</a></li>
+            <li>Phone: (478)-251-7688</li>    
+        </ul>
     </footer>
 </html>
 
