--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>        
         <!--Navagiation Section-->
         <nav class="navbar">
-            <li><a href="#Welcome To My Website">Home</a></li>
+            <li><a href="#heading">Home</a></li>
             <li><a href="#Experience">Experience</a></li>
             <li><a href="#Skills">Skills</a></li>
             <li><a href="#Education">Education</a></li>
@@ -37,7 +37,7 @@
                             </li>
                     </ul>
             <hr>
-            <h3>PrimeRevenue | Atlanta, GA | May 2019 - August 2019</h3>
+            <h3>PrimeRevenue | Atlanta, GA | May 2019 - Aug. 2019</h3>
                 <h4>Global Program Manager Intern</h4>
                     <ul>
                         <li>Optimized Salesforce to create reports and effectively manage over 400 suppliers across 5 major programs to
@@ -60,7 +60,7 @@
                     </ul>
         </div>
         <!--Skills Section-->
-        <div class="Skills" style="background-color: 000091;font-family: Arial, Helvetica, sans-serif;">
+        <div class="Skills" >
             <h2>Skills</h2>
         <br>
         <table>
@@ -102,7 +102,7 @@
         </table>
         </div>        
         <!--Education Section-->
-        <div class="Education" style="background-color: 000091;font-family: Arial, Helvetica, sans-serif;">
+        <div class="Education" >
             <h2>Education</h2>
         <br>
             <h3>University of Georgia | Athens, GA | Expected: May 2020</h3>
