add id to skip div

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </ul>
         </div>
         <!--Skills Section-->
-        <div class="Skills" >
+        <div class="Skills" id="Skills">
             <h2>Skills</h2>
         <br>
         <table>
